[tool.poetry]
name = "langgraph"
version = "0.1.0"
description = "Langgraph Agent for adaptive Document Chat"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-core = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
